# roq-aster-futures

./: CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: .gitignore
conda/: meta.yaml
share/: config.toml
share/flags/prod/: flags.cfg
share/flags/test/: flags.cfg
src/roq/aster_futures/: .gitignore  CMakeLists.txt  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.hpp  config.cpp  config.hpp  drop_copy.cpp  drop_copy.hpp  gateway.cpp  gateway.hpp  index.rst  instrument.cpp  instrument.hpp  live.sh  main.cpp  market_data.cpp  market_data.hpp  order_entry.cpp  order_entry.hpp  order_entry_state.hpp  order_entry_state.json  rest.cpp  rest.hpp  rest_state.hpp  rest_state.json  settings.cpp  settings.hpp  shared.cpp  shared.hpp
src/roq/aster_futures/fix_bridge/: .gitignore  application.cpp  application.hpp  config.cpp  config.hpp  live.sh  main.cpp  settings.cpp  settings.hpp
src/roq/aster_futures/flags/: .gitignore  CMakeLists.txt  flags.json  mbp.json  misc.json  rest.json  settings.cpp  settings.hpp  ws.json
src/roq/aster_futures/gateway/: CMakeLists.txt  account.cpp  account.hpp  api.cpp  api.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  drop_copy.cpp  drop_copy.hpp  instrument.cpp  instrument.hpp  market_data.cpp  market_data.hpp  order_entry.cpp  order_entry.hpp  rest.cpp  rest.hpp  settings.hpp  shared.cpp  shared.hpp
src/roq/aster_futures/json/: .gitignore  CMakeLists.txt  account.json  account_assets.json  account_assets_data.json  account_assets_data_assets_item.json  account_data_item.json  account_data_item_coin_item.json  account_info.json  account_info_data.json  account_info_data_coin_config_item.json  account_info_data_symbol_config_item.json  account_mode.json  ack.json  ack_error.json  ack_result.json  ack_result_status.json  action.json  agg_trade.json  arg.json  asset_mode.json  book.json  book_data.json  book_data_item.json  book_ticker.json  cancel_all_orders_ack.json  cancel_all_orders_ack_data.json  cancel_all_orders_ack_data_list_item.json  cancel_order_ack.json  cancel_order_ack_data.json  category.json  category_ws.json  contract_type.json  delivery_period.json  depth.json  depth_ack.json  depth_update.json  depth_update_item.json  encoder.cpp  encoder.hpp  (+76 more)
src/roq/aster_futures/protocol/json/: .gitignore  CMakeLists.txt  account.json  account_assets.json  account_assets_data.json  account_assets_data_assets_item.json  account_data_item.json  account_data_item_coin_item.json  account_info.json  account_info_data.json  account_info_data_coin_config_item.json  account_info_data_symbol_config_item.json  account_mode.json  ack.json  ack_error.json  ack_result.json  ack_result_status.json  action.json  agg_trade.json  arg.json  asset_mode.json  book_ticker.json  cancel_all_orders_ack.json  cancel_all_orders_ack_data.json  cancel_all_orders_ack_data_list_item.json  cancel_order_ack.json  cancel_order_ack_data.json  category.json  category_ws.json  contract_type.json  delivery_period.json  depth_ack.json  depth_update.json  depth_update_item.json  encoder.cpp  encoder.hpp  event.json  event_type.json  exchange_info_ack.json  exchange_info_ack_symbols_item.json  (+59 more)
src/roq/aster_futures/tools/: crypto.cpp  crypto.hpp
test/: .gitignore  CMakeLists.txt  json_agg_trade.cpp  json_book.cpp  json_book_ticker.cpp  json_depth_ack.cpp  json_depth_update.cpp  json_exchange_info.cpp  json_exchange_info_ack.cpp  json_kline.cpp  json_mark_price_update.cpp  json_market24h.cpp  json_mini_ticker.cpp  json_products.cpp  json_ticker.cpp  json_trades.cpp  parser_tester.hpp
